--- a/nginx/conf.d/cart_practice.conf
+++ b/nginx/conf.d/cart_practice.conf
@@ -1,7 +1,7 @@
-# upstream unicorn {
-#   #ユニコーンソケットの設定
-#   server unix:/var/www/html/app/cart_practice/tmp/sockets/unicorn.sock fail_timeout=0;
-# }
+upstream unicorn {
+  #ユニコーンソケットの設定
+  server unix:/var/www/html/app/cart_practice/api/tmp/sockets/unicorn.sock fail_timeout=0;
+}
 
 server {
   listen 80;
@@ -25,28 +25,28 @@ server {
     proxy_set_header Access-control-Allow-Origin $http_host;
   }
 
-  # location /api {
-  #   proxy_pass http://api_server:3001;
-  #   proxy_set_header X-Real-IP $remote_addr;
-  #   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-  #   proxy_set_header X-Forwarded-Proto http;
-  #   proxy_set_header Host $http_host;
-  #   client_max_body_size 17m;
-  #   proxy_http_version 1.1;
-  #   proxy_set_header Upgrade $http_upgrade;
-  #   proxy_set_header Connection "upgrade";
-  #   proxy_connect_timeout 10;
-  #   proxy_send_timeout 10;
-  #   proxy_read_timeout 1500;
-  # }
+  location /api {
+    proxy_pass http://api:3001;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto http;
+    proxy_set_header Host $http_host;
+    client_max_body_size 17m;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
+    proxy_connect_timeout 10;
+    proxy_send_timeout 10;
+    proxy_read_timeout 1500;
+  }
 
-  # location @unicorn {
-  #   proxy_pass http://unicorn;
-  #   proxy_set_header X-Real-IP $remote_addr;
-  #   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-  #   proxy_set_header Host $http_host;
-  #   proxy_connect_timeout 10;
-  #   proxy_send_timeout 10;
-  #   proxy_read_timeout 1500;
-  # }
+  location @unicorn {
+    proxy_pass http://unicorn;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Host $http_host;
+    proxy_connect_timeout 10;
+    proxy_send_timeout 10;
+    proxy_read_timeout 1500;
+  }
 }
