--- a/client/package.json
+++ b/client/package.json
@@ -45,9 +45,11 @@
     "@babel/preset-env": "^7.14.2",
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
+    "@types/react-router-dom": "^5.1.7",
     "babel-loader": "8.1.0",
     "dotenv": "^10.0.0",
     "dotenv-cli": "^4.0.0",
+    "react-router-dom": "^5.2.0",
     "sass": "^1.34.0",
     "sass-loader": "^11.1.1",
     "style-loader": "^2.0.0",
