--- a/api/Gemfile
+++ b/api/Gemfile
@@ -34,8 +34,9 @@ group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
   gem 'rspec-rails'
-  # gem 'rubocop-airbnb'
   gem 'factory_bot'
+  # FIXME ruby 3.0.1非対応のためコメントアウト
+  # gem 'rubocop-airbnb'
 end
 
 group :development do
