--- a/api/Gemfile
+++ b/api/Gemfile
@@ -23,22 +23,24 @@ gem 'bcrypt', '~> 3.1.7'
 
 # Reduces boot times through caching; required in config/boot.rb
 gem 'bootsnap', '>= 1.4.4', require: false
-
+# config
 gem 'config'
+# ActiveModelSerializer
 gem 'active_model_serializers'
-
 # Use Rack CORS for handling Cross-Origin Resource Sharing (CORS), making cross-origin AJAX possible
 gem 'rack-cors'
-
+# Devise
 gem 'devise'
 gem 'devise_token_auth'
+# parser
+gem 'parser', '~> 3.0'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
   gem 'rspec-rails'
   gem 'factory_bot'
-  # FIXME ruby 3.0.1非対応のためコメントアウト
+  # FIXME ruby 3.0.1非対応のためコメントアウト airbnbがダメ？
   # gem 'rubocop-airbnb'
 end
 
