--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -6,6 +6,8 @@ ENV MYSQL_USERNAME=root
 ENV MYSQL_PASSWORD=pass
 ENV DOCKER_MYSQL_HOST=mysql
 ENV MYSQL_PORT=3306
+ENV REDIS_HOST=redis
+ENV REDIS_PORT=6379
 ENV TZ=Asia/Tokyo
 ENV DOCKERIZE_VERSION v0.6.1
 
