--- a/client/package.json
+++ b/client/package.json
@@ -46,6 +46,7 @@
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
     "@types/react-router-dom": "^5.1.7",
+    "axios": "^0.21.1",
     "babel-loader": "8.1.0",
     "dotenv": "^10.0.0",
     "dotenv-cli": "^4.0.0",
