--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,16 @@ services:
       - 3306:3306
     networks:
       - cart-practice
+  redis:
+    build:
+      context: ./redis
+      dockerfile: Dockerfile
+    container_name: redis
+    tty: true
+    ports:
+      - 6379:6379
+    networks:
+      - cart-practice
   api:
     build:
       context: ./api
@@ -26,6 +36,7 @@ services:
       - 3001:3001
     depends_on:
       - mysql
+      - redis
     networks:
       - cart-practice
   client:
