--- a/client/package.json
+++ b/client/package.json
@@ -45,6 +45,9 @@
     "@babel/preset-env": "^7.14.2",
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@types/react-router-dom": "^5.1.7",
     "axios": "^0.21.1",
     "babel-loader": "8.1.0",
