--- a/client/package.json
+++ b/client/package.json
@@ -48,15 +48,23 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
+    "@types/redux-localstorage": "^1.0.8",
     "axios": "^0.21.1",
     "babel-loader": "8.1.0",
     "dotenv": "^10.0.0",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
+    "redux": "^4.1.0",
+    "redux-devtools": "^3.7.0",
+    "redux-localstorage": "^0.4.1",
     "sass": "^1.34.0",
     "sass-loader": "^11.1.1",
     "style-loader": "^2.0.0",
     "ts-loader": "^9.2.2",
+    "typescript-fsa": "^3.0.0",
+    "typescript-fsa-reducers": "^1.2.2",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0"
   }
