--- a/api/Gemfile
+++ b/api/Gemfile
@@ -3,51 +3,31 @@ git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 
 ruby '3.0.1'
 
-# Bundle edge Rails instead: gem 'rails', github: 'rails/rails', branch: 'main'
-gem 'rails', '~> 6.1.3', '>= 6.1.3.2'
-# Use mysql as the database for Active Record
-gem 'mysql2', '~> 0.5'
-# Use Puma as the app server
-# gem 'puma', '~> 5.0'
-# Use Unicorn as the app server
-gem 'unicorn'
-# Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
-# gem 'jbuilder', '~> 2.7'
-# Use Redis adapter to run Action Cable in production
-# gem 'redis', '~> 4.0'
-# Use Active Model has_secure_password
-gem 'bcrypt', '~> 3.1.7'
-
-# Use Active Storage variant
-# gem 'image_processing', '~> 1.2'
-
-# Reduces boot times through caching; required in config/boot.rb
-gem 'bootsnap', '>= 1.4.4', require: false
-# config
-gem 'config'
-# ActiveModelSerializer
 gem 'active_model_serializers'
-# Use Rack CORS for handling Cross-Origin Resource Sharing (CORS), making cross-origin AJAX possible
-gem 'rack-cors'
-# Devise
+gem 'bcrypt', '~> 3.1.7'
+gem 'bootsnap', '>= 1.4.4', require: false
+gem 'config'
 gem 'devise'
 gem 'devise_token_auth'
-# parser
+gem 'mysql2', '~> 0.5'
 gem 'parser', '~> 3.0'
+gem 'rack-cors'
+gem 'rails', '~> 6.1.3', '>= 6.1.3.2'
+gem 'redis', '~> 4.0'
+gem 'ridgepole'
+gem 'unicorn'
 
 group :development, :test do
-  # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
-  gem 'rspec-rails'
   gem 'factory_bot'
   # FIXME ruby 3.0.1非対応のためコメントアウト airbnbがダメ？
   # gem 'rubocop-airbnb'
+  gem 'rspec-rails'
 end
 
 group :development do
   gem 'listen', '~> 3.3'
   gem 'pry-rails'
-  # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
   gem 'spring'
 end
 
