--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -5,6 +5,7 @@ ENV CORS_ALLOWED_ORIGINS_HOST=http://localhost:3000
 ENV MYSQL_USERNAME=root
 ENV MYSQL_PASSWORD=pass
 ENV DOCKER_MYSQL_HOST=mysql
+ENV DB_YML_PATH=config/database.yml
 ENV MYSQL_PORT=3306
 ENV REDIS_HOST=redis
 ENV REDIS_PORT=6379
