--- a/api/.gitignore
+++ b/api/.gitignore
@@ -24,3 +24,8 @@
 config/settings.local.yml
 config/settings/*.local.yml
 config/environments/*.local.yml
+
+/config/credentials/test.key
+/config/credentials/development.key
+/config/credentials/staging.key
+/config/credentials/production.key
