--- a/api/Gemfile
+++ b/api/Gemfile
@@ -9,6 +9,7 @@ gem 'bootsnap', '>= 1.4.4', require: false
 gem 'config'
 gem 'devise'
 gem 'devise_token_auth'
+gem 'lockbox'
 gem 'mysql2', '~> 0.5'
 gem 'parser', '~> 3.0'
 gem 'rack-cors'
