--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     build:
       context: ./mysql
       dockerfile: Dockerfile
+    volumes: 
+      - ./mysql/mysql_data:/var/lib/mysql
     container_name: mysql
     tty: true
     restart: always
@@ -28,7 +30,6 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ./api:/var/www/html/app/cart_practice/api
-      # - ./api/.bundle:/usr/local/bundle
     container_name: api
     stdin_open: true
     tty: true
