--- a/client/package.json
+++ b/client/package.json
@@ -53,7 +53,9 @@
     "@types/redux-localstorage": "^1.0.8",
     "axios": "^0.21.1",
     "babel-loader": "8.1.0",
+    "bootstrap": "5.0.2",
     "dotenv": "^10.0.0",
+    "react-bootstrap": "^2.0.0-beta.4",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "redux": "^4.1.0",
